Update environment variables

--- a/.env.SAMPLE
+++ b/.env.SAMPLE
@@ -1,4 +1,4 @@
-SANITY_PROJECT_ID=__?__
-SANITY_DATASET=development
-SANITY_API_TOKEN=__?__
+NEXT_PUBLIC_SANITY_PROJECT_ID=__?__
+NEXT_PUBLIC_SANITY_DATASET=development
+NEXT_PUBLIC_SANITY_API_TOKEN=__?__
 NODE_ENV=development
