--- a/.env.SAMPLE
+++ b/.env.SAMPLE
@@ -1,4 +1,5 @@
-NEXT_PUBLIC_SANITY_PROJECT_ID=__?__
-NEXT_PUBLIC_SANITY_DATASET=development
-NEXT_PUBLIC_SANITY_API_TOKEN=__?__
+SANITY_PROJECT_ID=
+SANITY_DATASET=
+SANITY_API_TOKEN=
+
 NODE_ENV=development
