--- a/.env.SAMPLE
+++ b/.env.SAMPLE
@@ -1,5 +1,5 @@
-SANITY_PROJECT_ID=
-SANITY_DATASET=
+NEXT_PUBLIC_SANITY_PROJECT_ID=
+NEXT_PUBLIC_SANITY_DATASET=
 SANITY_API_TOKEN=
 
 NODE_ENV=development
