--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "10.1.3",
+    "next": "^10.2.0",
     "next-google-fonts": "^2.2.0",
     "next-sanity": "^0.1.12",
-    "next-sanity-image": "^1.0.1",
+    "next-sanity-image": "^3.0.0",
     "next-seo": "^4.24.0",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.12.0"
